# autonomous-enterprise-ai-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
docs/: architecture.md  development.md  portfolio-architecture.md
examples/: procurement_demo.csv  sales_demo.csv
migrations/: env.py
scripts/: build_release_package.py  manage_database.py  manage_recovery.py  manage_run_archive.py  production_readiness.py  release_operations.py  run_procurement_demo.py  run_workflow_worker.py  smoke_check.py  validate_cloud_deployment.py  validate_kubernetes_manifests.py  validate_production_readiness.py  validate_runtime_config.py
tests/: test_analytics_agent.py  test_anomaly_intelligence.py  test_api_runs.py  test_artifact_storage.py  test_cloud_deployment.py  test_connector_explorer_api.py  test_connector_installation_repository.py  test_connector_registry.py  test_connectors_api.py  test_credential_providers.py  test_data_ingestion.py  test_data_sources_api.py  test_database_migrations.py  test_dynamic_analysis.py  test_enterprise_identity.py  test_evaluation_agent.py  test_graph_validation.py  test_health.py  test_http_hardening.py  test_investigations_api.py  test_kubernetes_manifests.py  test_langsmith_tracking.py  test_mlflow_tracking.py  test_operational_dashboards.py  test_orchestrator_service.py  test_planner_agent.py  test_portfolio_documentation.py  test_predictive_analytics.py  test_procurement_demo.py  test_production_readiness.py  test_release_package.py  test_report_agent.py  (+10 more)
(+171 files in other folders)
