[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-enterprise-ai-os"
version = "0.1.0"
description = "Durable multi-agent workflow platform for enterprise analytics tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "langgraph>=0.2,<1.0",
    "langchain-core>=0.3,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.0,<7.0",
    "python-multipart>=0.0.9,<1.0",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pyyaml>=6,<7",
    "pytest>=8,<9",
    "ruff>=0.6,<1.0",
]
analysis = [
    "pandas>=2.2,<3.0",
    "plotly>=5.24,<7.0",
    "scikit-learn>=1.5,<2.0",
]
observability = [
    "langsmith>=0.1,<1.0",
    "mlflow>=2.16,<4.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2.0",
]
storage = [
    "boto3>=1.34,<2.0",
]
warehouse = [
    "snowflake-connector-python>=3.12,<4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q -p no:langsmith_plugin"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
